<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/catimage"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:contentDescription="@string/catimage"
        android:src="@drawable/game_over" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:gravity="center"
        android:text="@string/dead"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize="25sp" />

</LinearLayout>