<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/start_image"
        android:layout_width="match_parent"
        android:layout_height="427dp"
        android:contentDescription="@string/start_image"
        android:layout_marginTop="50dp"
        android:src="@drawable/cat_title_screen" />
    <Button
        android:id="@+id/start_btn"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/purple_200"
        android:textColor="@color/white"
        android:text="@string/start"
        android:layout_marginVertical="0dp"
        android:layout_marginEnd="60dp"
        android:layout_gravity="end"/>

    <TextView
        android:id="@+id/game_info"
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_gravity="end"
        android:text="@string/info"
        android:textColor="@color/white" />
</LinearLayout>